[CHANGED]Aligner Units and Mask Aligner crafting recipes.
[CHANGED]Now Circuit Wiring (Platinum) are made in Mask Aligner.
[CHANGED]Now Fluid Solidifiers accept CU instead of EU.
[CHANGED]Some recipes are now processed in heat mixers instead of mixers.
[ADDED]Heat Mixers (T1-T5)
[WIP]Polytetrafluoroethylene drums and pipes.

6.13.06:
[CHANGED]You can no longer Put dust into Extruder
[CHANGED]Assembler-Circuit Assembler.It should be different from Welder
[ADDED]More organic fluids
Dichloroisopropanol
Cumene
Silane
Allyl Chloride
Acrylic Acid
Ethyl Acrylate
Styrene
Vinyl Chloride
Ethyne
Photoresist
[ADDED]
Mask Aligner. A more powerful and precise machine to align nano-scale patterns on wafers.
Built from Stainless Steel Walls and Aligner Units, its purpose will be added in the future.
[ADDED]Aligner Units used to build Mask Aligner

6.13.05:
[FIXED]Some Recipe conflict
[ADDED]Process of Isoprene, which produces Rubber chemically.

6.13.04: 
[FIXED]DistillationTower does not output lubricant.
[FIXED]DistillationTower recipe does not have recipe output Gasoil With Sulfur
[CHANGED]Copper and Cassiterite now can Worldgen in Stone Layer.
[CHANGED]Particle Collider now needs minimum 20 particle in the input slot to operate.
[CHANGED]Some recipes of the Particle Collider to adjust the previous change.
[ADDED]IV Battery(8192EU/t)
[ADDED]Electrical Proof Machine Casing.
[ADDED]Recipes of ionized gas now are added.
[ADDED]Multiblock Large Roasting Oven.
[ADDED]Single block gas turbines.
[ADDED]
Multiblock Ionizer.
3x3x3 Hollow of Electrical Proof Machine Casing, with the Main at the center of any bottom side.

6.13.03: 
[FIXED]molten metal in tank system are forbidden now.
[FIXED]Titanium Niobium Carbide can not made in crucible.
[FIXED]Tooltips of large heat exchanger still like before.
[FIXED]Distillation Tower now output fluid in the correct order
[FIXED]Gearboxes sometimes breaking/overloading on World Load.