@@ -478,6 +478,23 @@ public class Loader_Recipes_Handlers implements Runnable {
 		RM.Cutter       .add(new RecipeMapHandlerPrefix(ingotTriple         , 1, FL.mul(tFluids[i], tMultiplier[i] * 2 * 16, 1000, T), 32, tMultiplier[i] * 2 * 16, 0, NF, ingot         , 3, NI, NI, F, T, F, tConditionM));
 		RM.Cutter       .add(new RecipeMapHandlerPrefix(ingotQuadruple      , 1, FL.mul(tFluids[i], tMultiplier[i] * 3 * 16, 1000, T), 32, tMultiplier[i] * 3 * 16, 0, NF, ingot         , 4, NI, NI, F, T, F, tConditionM));
 		RM.Cutter       .add(new RecipeMapHandlerPrefix(ingotQuintuple      , 1, FL.mul(tFluids[i], tMultiplier[i] * 4 * 16, 1000, T), 32, tMultiplier[i] * 4 * 16, 0, NF, ingot         , 5, NI, NI, F, T, F, tConditionM));
+
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(blockSolid         , 1, NF,  16,tMultiplier[i] * 7 * 32,     0, NF, plate        , 9, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(stickLong          , 1, NF,  16,tMultiplier[i]     * 32,     0, NF, stick        , 2, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(stick              , 1, NF,  16,tMultiplier[i] * 3 * 32,     0, NF, bolt         , 4, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(plate              , 1, NF,  16,tMultiplier[i] * 4 * 32,     0, NF, plateTiny    , 9, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(plateGem           , 1, NF,  16,tMultiplier[i] * 4 * 32,     0, NF, plateGemTiny , 9, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(gemChipped         , 1, NF,  16,tMultiplier[i]     * 32,     0, NF, plateGemTiny , 2, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(gemFlawed          , 1, NF,  16,tMultiplier[i] * 2 * 32,     0, NF, plateGemTiny , 4, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(gem                , 1, NF,  48,tMultiplier[i]     * 32,     0, NF, plateGem     , 1, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(gemFlawless        , 1, NF,  48,tMultiplier[i]     * 32,     0, NF, plateGem     , 3, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(gemExquisite       , 1, NF,  48,tMultiplier[i] * 3 * 32,     0, NF, plateGem     , 5, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(gemLegendary       , 1, NF,  48,tMultiplier[i] * 7 * 32,     0, NF, plateGem     , 9, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(bouleGt            , 1, NF,  16,tMultiplier[i] * 3 * 32,     0, NF, plateGem     , 6, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(ingotDouble        , 1, NF,  16,tMultiplier[i]     * 32,     0, NF, ingot        , 2, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(ingotTriple        , 1, NF,  16,tMultiplier[i] * 2 * 32,     0, NF, ingot        , 3, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(ingotQuadruple     , 1, NF,  16,tMultiplier[i] * 3 * 32,     0, NF, ingot        , 4, NI, NI, F, F, F, ANTIMATTER.NOT));
+		RM.LaserCutter  .add(new RecipeMapHandlerPrefix(ingotQuintuple     , 1, NF,  16,tMultiplier[i] * 4 * 32,     0, NF, ingot        , 5, NI, NI, F, F, F, ANTIMATTER.NOT));
 		}
 		
 		ICondition tConditionP = new Nor(PREFIX_UNUSED, PLANT_DROP, IS_CONTAINER, DUST_BASED, ORE, ORE_PROCESSING_BASED, scrapGt, ingotHot);
